Kubernetes/learn/service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: frontend # pod label
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30003
